--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title><%= title %></title>
+        <title><%= user.name %></title>
         <link rel="stylesheet" href="/css/styles.css" type="text/css" />
     </head>
     <body>
-        <h1><%= title %></h1>
+        <h1><%= user.name %></h1>
         <% if (user) { %>
         <a href="/logout">Logout</a>
         <% for (let i = 0; i < 3; i++) { %>
@@ -19,5 +19,11 @@
         <a href="/register">Register</a>
         <% } %>
         <p>Welcome to your Express EJS project!</p>
+
+        <form method="post" action="/startForms">
+            <label for="country">Country</label>
+            <input type="text" name="country" id="country" />
+            <input type="submit" value="Submit" />
+        </form>
     </body>
 </html>
